# CSVLedger

./: .pre-commit-config.yaml  .travis.myl  .travis.yml  LICENSE.TXT  README.md  codecov.yml  config.py  csvledger.py  pyproject.toml  report.py  requirements-dev.txt  requirements.txt  setup.py  transaction.csv
.github/ISSUE_TEMPLATE/: bug_report.md
csvledger/: cli.py  config.py  csvledger.py
docs/: Contributing.rst  Quickstart.rst  conf.py  csvledger.rst  index.rst  license.rst  modules.rst
tests/: sample_config.json  sample_config.yml  sample_config_no_filter.yml  sample_transactions.csv  test_cli.py  test_config.py  test_csvledger.py
